--- a/src/main/webapp/WEB-INF/templates/layouts/default.jade
+++ b/src/main/webapp/WEB-INF/templates/layouts/default.jade
@@ -6,7 +6,14 @@
 html
   head
     title= title
+    link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css')
+    link(rel='stylesheet' href='css/starter-template.css')
+    script(data-main='js/main' src='https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.20/require.min.js')
   body
-    #content
-      h1= headline
-      != body
+    //#content
+    //  h1= headline
+    //  != body
+    div(class="container")
+      div(class="starter-template")
+        h1= headline
+        != body
