--- a/src/main/webapp/WEB-INF/templates/views/hello-scalate.jade
+++ b/src/main/webapp/WEB-INF/templates/views/hello-scalate.jade
@@ -1,4 +1,4 @@
-- attributes("title") = "Scalatra: a tiny, Sinatra-like web framework for Scala"
-- attributes("headline") = "Welcome to Scalatra"
+- attributes("title") = "Scala/Kafka Chat"
+- attributes("headline") = "Scala/Kafka Chat"
 
-p= "Hello, Scalate!"
+p= "A distributed chat system using Scalatra and Kafka."
