Backbone layouts and templating are working.

--- a/src/main/webapp/WEB-INF/templates/layouts/default.jade
+++ b/src/main/webapp/WEB-INF/templates/layouts/default.jade
@@ -17,3 +17,5 @@ html
       div(class="starter-template")
         h1= headline
         != body
+        div(id="appview")
+          div(id="main")
